// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spacer/Spacer renders with no props 1`] = `
.emotion-0 {
  width: 16px;
  height: 16px;
}

<div
  className="emotion-0 hig__spacer-v1"
/>
`;

exports[`spacer/Spacer renders with size 1`] = `
.emotion-0 {
  width: 40px;
  height: 40px;
}

<div
  className="emotion-0 hig__spacer-v1"
/>
`;

exports[`spacer/Spacer renders with size and spacing 1`] = `
.emotion-0 {
  width: 40px;
  height: 40px;
}

<div
  className="emotion-0 hig__spacer-v1"
/>
`;

exports[`spacer/Spacer renders with spacing 1`] = `
.emotion-0 {
  width: 16px;
  height: 16px;
}

<div
  className="emotion-0 hig__spacer-v1"
/>
`;
